syntax = "proto3";

package render_server;

option go_package = "src/proto";

service Renderer {
    rpc RequestRender (RenderRequest) returns (RenderReply) {}
}

message RenderRequest {
    repeated Object objects = 1;
}

message RenderReply {
    bytes imageBytes = 1;
}

message Object {
    string shape = 1;
    Vector position = 2;
    Vector scale = 3;
}

message Vector {
    double x = 1;
    double y = 2;
    double z = 3;
}
